--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
         </div>
       </div>
       <div class="row pt-5">
-        <div id="ghcjs"></div>
-        <iframe id="jsaddle" src="http://localhost:8080/" frameborder="0" style="width: 100%; height: 100%;"
+        <div id="ghcjs">
+        </div>
+        <!-- <iframe id="jsaddle" src="http://localhost:8080/" frameborder="0" style="width: 100%; height: 100%;"
           seamless="true" scrolling="no">
-        </iframe>
+        </iframe> -->
       </div>
     </div>
 
