--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="row" id="ghcjs">
         </div>
         <div class="row">
-          <iframe id="jsaddle" src="http://localhost:8080/" frameborder="0" style="width: 100%; height: 100%;"
+          <!-- <iframe id="jsaddle" src="http://localhost:8082/" frameborder="0" style="width: 100%; height: 100%;"
             seamless="true" scrolling="yes">
-          </iframe>
+          </iframe> -->
         </div>
       </div>
     </div>
@@ -111,73 +111,17 @@
       `<br>` +
       `&bull; <a href='https://bit.ly/32zuO4u'>BNF</a>` +
       `<div>`
-
+      
     document.getElementById("editor_info").setAttribute("data-bs-content", editorInfo)
 
   </script>
 
-  <script src="codemirror/docs/build/bundle.js">
-    // load codemirror and set up on the page
+  <script src="https://cdn.jsdelivr.net/gh/br4ch1st0chr0n3/phi-minimal-editor/docs/build/bundle.js">
+    // add codemirror
   </script>
 
-  <script>
-    // extract query parameters from URL to set editor
-
-    let view = app.view;
-    const params = new URLSearchParams(window.location.search);
-
-    // use default snippet if one is not set in the query parameters 
-    snippet =
-      `[
-  price -> ^1.int_2,
-  book -> [
-    title -> ^2.title,
-    price -> ?
-  ],
-  manga -> [
-    manga_title -> ^2.str_publisher.add(str -> ^0.title),
-    @ -> ^1.book
-  ](price -> ^0.price),
-  title -> ^0.manga.manga_title
-].manga.price`
-
-    if (params.has("snippet")) {
-      snippet = decodeURIComponent(params.get("snippet"));
-    };
-
-    // change editor content
-    view.dispatch({
-      changes: { from: 0, to: view.state.doc.length, insert: snippet }
-    });
-
-  </script>
-
-  <script defer>
-
-    var popoverList = []
-
-    let target = document.getElementById('ghcjs');
-
-    let config = {
-      childList: true,
-      subtree: true
-    };
-
-    const callback = function (mutationsList, observer) {
-      let t = document.getElementById("app_div");
-      if (t) {
-        let popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-        popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-          return new bootstrap.Popover(popoverTriggerEl, { container: 'body', html: true })
-        });
-        observer.disconnect();
-        return;
-      }
-    };
-
-    const app_observer = new MutationObserver(callback);
-
-    app_observer.observe(target, config);
+  <script src="src/scripts/scripts.js">
+    // run setup scripts
   </script>
 
 </body>
