--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <title>Try 𝜑-calculus!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script src="all.js"></script>
+  <!-- <script src="all.js"></script> -->
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <link rel="shortcut icon" href="https://www.yegor256.com/images/books/elegant-objects/cactus.png" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css" />
-  <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css" /> -->
+  <!-- <link rel="stylesheet" href="styles.css" type="text/css"> -->
   <style>
     section {
       width: 100%;
@@ -37,92 +37,12 @@
 </head>
 
 <body>
-  <section>
-    <header>
-      <center>
-        <a href="https://www.eolang.org">
-          <img src="https://www.yegor256.com/images/books/elegant-objects/cactus.png"
-            style="width: 64px; height: 64px" />
-        </a>
-      </center>
-    </header>
-    <div class="container-fluid" id="cont">
-      <div class="col">
-        <div class="row">
-          <p>
-            <label class="selected_mode">
-              Minimal
-            </label>
-            <!-- <label class="switch">
-              <input type="checkbox" id="toggler" onchange="switch_mode()">
-              <span class="slider round"></span>
-            </label>
-            <label class="selected_mode">
-              Full
-            </label> -->
-            <label class="reference_line">
-              <a href="https://www.eolang.org">𝜑-calculus</a> expression
-              (<a id="__permalink__" href="#">permalink</a>)
-            </label>
-            <label class="selected_mode bi bi-info-square" data-bs-container="body" data-bs-toggle="popover"
-              data-bs-placement="top" id="editor_info"></label>
-          </p>
-          <div id="editor"></div>
-        </div>
-      </div>
-      <div class="row pt-5">
-        <div class="row" id="ghcjs">
-        </div>
-        <div class="row">
-          <!-- <iframe id="jsaddle" src="http://localhost:8082/" frameborder="0" style="width: 100%; height: 100%;"
-            seamless="true" scrolling="yes">
-          </iframe> -->
-        </div>
-      </div>
-    </div>
 
-    <footer>
-      <nav>
-        <ul>
-          <li>
-            To discuss how 𝜑-calculus works, join our
-            <a href="https://t.me/polystat_org">Telegram group</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="https://github.com/polystat/try-phi/stargazers">
-              <img src="https://img.shields.io/github/stars/polystat/try-phi.svg?style=flat-square"
-                alt="github stars" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
-  </section>
-
-  <script>
-    // popover for editor
-    let editorInfo =
-      `<div>` +
-      `&bull; Original <a href='https://drive.google.com/open?id=1ZxlI0npXn4qLQj9hzCQtH3-O5xnrAsJH&disco=AAAATVEUf-E'>syntax</a>` +
-      `<br>` +
-      `&bull; 𝜑-calculus <a href='https://drive.google.com/file/d/1ZxlI0npXn4qLQj9hzCQtH3-O5xnrAsJH/edit?disco=AAAASlupb0I'>definition</a>` +
-      `<br>` +
-      `&bull; <a href='https://bit.ly/32zuO4u'>BNF</a>` +
-      `<div>`
-      
-    document.getElementById("editor_info").setAttribute("data-bs-content", editorInfo)
-
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/gh/br4ch1st0chr0n3/phi-minimal-editor/docs/build/bundle.js">
-    // add codemirror
-  </script>
-
-  <script src="src/scripts/scripts.js">
-    // run setup scripts
-  </script>
+  <div id="ghcjs">
+    <script src="all.js"></script>
+  </div>
+  <script src="src/scripts/set-snippet.js"></script>
+  <script src="src/scripts/init-popovers.js"></script>
 
 </body>
 
