remove scripts from index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Try 𝜑-calculus!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
+  <!-- <style>
     section {
       width: 100%;
     }
@@ -26,16 +26,12 @@
     #__textarea__ {
       border: 1px solid lightgray;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
 
-  <div id="ghcjs">
-    <script src="all.js"></script>
-  </div>
-  <script src="src/scripts/set-snippet.js"></script>
-  <script src="src/scripts/init-popovers.js"></script>
+  <script src="all.js"></script>
 
 </body>
 
