--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Halogen7 Template</title>
+    <title>phi-editor-purs</title>
   </head>
   <body>
     <script type="module" src="./index.js"></script>
