--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>phi-editor-purs</title>
+    <style src="./styles.css"></style>
   </head>
   <body>
     <script type="module" src="./index.js"></script>
