make purs listen to editor changes

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,6 +6,20 @@
     <style src="./styles.css"></style>
   </head>
   <body>
-    <script type="module" src="./index.js"></script>
+    <div>
+      <script type="module" src="./index.js"></script>
+    </div>
+    <div id = "code-changed"></div>
+    <script>
+      // document.addEventListener("phi-editor-code-changed", function(e) {
+      //   document.getElementById("code-changed").innerHTML = e.detail.newCode
+      //   if (document.getElementById("catch") !== null) {
+      //     let t = new CustomEvent(e.type, e.detail)
+      //     // console.log("ok")
+      //     document.getElementById("catch").dispatchEvent(t)
+      //   }
+        
+      // })
+    </script>
   </body>
 </html>
